# platelet

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  release.yml
examples/cli_hello_world/: Cargo.toml
examples/cli_hello_world/src/: main.rs
platelet/: Cargo.toml
platelet/src/: main.rs
