[package]
name = "platelet"
version.workspace = true
description.workspace = true
rust-version.workspace = true
edition.workspace = true
keywords.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
